<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/background_color"
tools:context="com.project.anonymousshrink.Activities.Profile">

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <EditText
            android:id="@+id/etFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/f_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:background="@drawable/edittext"
            android:hint="@string/l_name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:text="Your sex ?"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="Male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:buttonTint="@color/white"
                    android:text="Female"
                    android:textColor="@color/white" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>


        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:background="@drawable/edittext"
            android:hint="@string/dob"
            android:clickable="true"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:background="@drawable/edittext"
            android:digits="+1234567890-_"
            android:hint="@string/contactNubmer"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/etEmailProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:background="@drawable/edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:text="Are you a psychologist ?"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDriving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rgDriving"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbGYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="Yes"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbGNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:buttonTint="@color/white"
                    android:text="No"
                    android:textColor="@color/white" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_login"
            android:elevation="3dp"
            android:text="Continue"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>


</LinearLayout>

