<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context="com.project.anonymousshrink.Activities.Register">


    <LinearLayout
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>


        <LinearLayout
            android:layout_marginTop="@dimen/space_between_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/etFName"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_marginRight="1dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:hint="@string/f_name"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/etLName"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:background="@drawable/edittext"
            android:hint="@string/l_name"
            android:inputType="textCapWords" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your sex ?"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="Male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:buttonTint="@color/white"
                    android:text="Female"
                    android:textColor="@color/white" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/etDOB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:background="@drawable/edittext"
            android:clickable="true"
            android:hint="@string/dob"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/etContactNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:background="@drawable/edittext"
            android:digits="+1234567890-_"
            android:hint="@string/contactNubmer"
            android:inputType="numberSigned" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_between_et"
            android:text="Are you a psychologist ?"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/rgPsychologist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/white"
                    android:text="Yes"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="5dp"
                    android:buttonTint="@color/white"
                    android:text="No"
                    android:textColor="@color/white" />
            </RadioGroup>
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:id="@+id/llsignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="Email"
                android:inputType="textEmailAddress" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/etPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext"
                    android:hint="Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilConfirmRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/etConfirmRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext"
                    android:hint="Confirm Password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvterms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingBottom="7dp"
                android:text="@string/terms"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnSinUpRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_login"
                android:elevation="3dp"
                android:enabled="false"
                android:text="SignUp"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/alreadyRegistered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text=" Sign In  "
                    android:textColor="@color/colorAccent"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>




